# tasks/src/main/java/juliokozarewicz/tasks/infrastructure/persistence/jpa/TasksRepositoryJPA.java
@@ -1,14 +1,11 @@
 package juliokozarewicz.tasks.infrastructure.persistence.jpa;
 
 import juliokozarewicz.tasks.infrastructure.persistence.model.TasksModel;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.data.jpa.repository.JpaSpecificationExecutor;
 import org.springframework.stereotype.Repository;
-
 import java.time.LocalDateTime;
-import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 
 @Repository
@@ -19,6 +16,15 @@ public interface TasksRepositoryJPA extends
         UUID idUser,
         String taskName,
         LocalDateTime dueDate
+    );
+
+    Optional<TasksModel> findByIdAndIdUser(UUID id, UUID idUser);
+
+    boolean existsByIdUserAndTaskNameAndDueDateAndIdNot(
+        UUID idUser,
+        String taskName,
+        LocalDateTime dueDate,
+        UUID id
     );
 
 }
